--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ app.controller('Ctrl', function($scope, $http, $interval) {
         .success(function(response) {$scope.data = response.results;});
         
     }
-    $interval(load,2000);
+    $interval(load,5000);
 });
 </script>
 <body>
@@ -26,7 +26,7 @@ app.controller('Ctrl', function($scope, $http, $interval) {
 
 </div>
 <span>Sponsors:</span>
-<a href="www.saproto.nl">Proto</a>
+<a href="www.saproto.nl"><abbr title="Study Association">S.A.</abbr> Proto</a>
 </body>
 </html>
 
